add Mesh, get started guides for dapp development

--- a/content/09-plutus/04-dapp-development.mdx
+++ b/content/09-plutus/04-dapp-development.mdx
@@ -82,4 +82,9 @@ Are you a developer building on Cardano with Plutus? Have you produced tutorials
 -   [A list of community-driven Plutus open-source tooling](https://docs.cardano.org/plutus/plutus-resources/#plutuscommunityresources)
 -   [A list of community-built developer tools on Cardano](https://www.essentialcardano.io/article/a-list-of-community-built-developer-tools-on-cardano)
 -   [Demeter Run](https://demeter.run/): a cloud environment with all the tools for building a DApp on Cardano
--   [Mesh](https://mesh.martify.io/): an open-source library with tools to build powerful DApps on Cardano.
+-   [Mesh](https://mesh.martify.io/): an open-source library for building Web3 applications on Cardano with ease.
+
+**Tutorials**
+
+- [How to integrate Cardano Smart Contract to your web application](https://mesh.martify.io/guides/smart-contract)
+- [How to interact with smart contracts, designing datums and redeemers](https://mesh.martify.io/apis/transaction/smart-contract)
