--- a/content/11-community/03-community-content.mdx
+++ b/content/11-community/03-community-content.mdx
@@ -17,6 +17,7 @@ we cannot verify that their content is fully accurate or completely up-to-date.
 * [building a Cardano stake pool using CNTools](https://www.youtube.com/watch?v=UN4rSRr7LDk&feature=youtu.be)
 * [Plutus Pioneers Program notes](https://plutus-pioneer-program.readthedocs.io/en/latest/plutus_pioneer_program.html)
 * [Developer resources on Essential Cardano](https://www.essentialcardano.io/developer)
+* [Guides to getting started on Web3 development](https://mesh.martify.io/guides)
 
 If you have produced material and would like to contribute your content for
 inclusion on this page, please click 'Edit in Github' in the upper-right hand
