ETCM-2805 improve text (remove 'if')

--- a/content/08-cardano-sidechains/01-basics/01-introduction-sidechains.mdx
+++ b/content/08-cardano-sidechains/01-basics/01-introduction-sidechains.mdx
@@ -36,4 +36,4 @@ The example EVM Sidechain construction features 'merged-staking', which allows m
 ## More information
 For a full description of the theoretical underpinning of the design, refer to the [original white paper](https://eprint.iacr.org/2018/1239.pdf).
 ## Contact Input Output
-If you are interested in a commercial partnership with IOG, please complete the form on the [contact page](https://iohk.io/en/contact-commercial/).
+To get involved, contact IOG through the [commercial contact page](https://iohk.io/en/contact-commercial/).
