--- a/content/09-plutus/04-dapp-development.mdx
+++ b/content/09-plutus/04-dapp-development.mdx
@@ -86,5 +86,5 @@ Are you a developer building on Cardano with Plutus? Have you produced tutorials
 
 **Tutorials**
 
-- [How to integrate Cardano Smart Contract to your web application](https://mesh.martify.io/guides/smart-contract)
+- [How to integrate Cardano smart contract to your web application](https://mesh.martify.io/guides/smart-contract)
 - [How to interact with smart contracts, designing datums and redeemers](https://mesh.martify.io/apis/transaction/smart-contract)
