--- a/content/06-development-guidelines/05-operating-a-stake-pool/03-node-connectivity.mdx
+++ b/content/06-development-guidelines/05-operating-a-stake-pool/03-node-connectivity.mdx
@@ -67,4 +67,4 @@ blocks. It is connected to its core node, other relays, and external nodes.
 Each node should run on a dedicated server, and the core node server’s firewall
 should be configured to only allow incoming connections from its relays.
 
-![network](network1.png)
+![network](https://ucarecdn.com/d236f988-39bb-47cb-9dfe-18a13cc8843f/)
