--- a/content/06-development-guidelines/01-node-tests.mdx
+++ b/content/06-development-guidelines/01-node-tests.mdx
@@ -13,7 +13,7 @@ You can access [**Cardano node tests documentation here**](https://input-output-
 
 Documentation includes such sections as:
 
--   [Getting started](https://input-output-hk.github.io/cardano-node-tests/readme.html#). Explains the process of installation  setup, usage, test variables, and more.
+-   [Getting started](https://input-output-hk.github.io/cardano-node-tests/readme.html#). Explains the process of setup, usage, test variables, and more.
 -   [Test results](https://input-output-hk.github.io/cardano-node-tests/test_results.html). Includes details about Nightly tests, sync tests, and node tag testing.
 -   [Process](https://input-output-hk.github.io/cardano-node-tests/process.html). Covers the types and levels of tests, quality control strategy, and user acceptance test strategy with more processes to be added soon.
 -   [How-to guides](https://input-output-hk.github.io/cardano-node-tests/how-tos.html). Guides on starting a local cluster, testing MIR certificate submission, stake credentials, and SMASH usage.
