--- a/content/08-cardano-sidechains/02-sidechain-toolkit.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit.mdx
@@ -1,6 +1,6 @@
 ---
-title: Sidechain Toolkit
-metaTitle: Sidechain Toolkit
+title: Sidechain toolkit
+metaTitle: Sidechain toolkit
 ---
 
 <!-- heading no content -->
