--- a/content/08-cardano-sidechains/03-example-evm-sidechains.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains.mdx
@@ -1,6 +1,6 @@
 ---
-title: Example EVM Sidechain
-metaTitle: Example EVM Sidechain
+title: Example EVM sidechain
+metaTitle: Example EVM sidechain
 ---
 
 <!-- heading no content -->
