--- a/content/08-cardano-sidechains/01-basics/02-ouroboros-description.mdx
+++ b/content/08-cardano-sidechains/01-basics/02-ouroboros-description.mdx
@@ -1,6 +1,6 @@
 ---
-title: Ouroboros Description
-metaTitle: Ouroboros Description
+title: About Ouroboros BFT
+metaTitle: About Ouroboros BFT
 ---
 
 # Ouroboros BFT: A simple Byzantine fault tolerant consensus protocol
