Minor formatting tweaks

--- a/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
@@ -2,7 +2,7 @@
 title: 'About Block Explorer'
 metaTitle: 'About Block Explorer'
 ---
-# Block Explorer
+
 A block explorer allows you to inspect a blockchain to see its blocks and
 transactions.  
 This document is based primarily on the
@@ -12,7 +12,7 @@ presentation of information.
 When you use a block explorer, it will list fields and their contents.  
 This document will help you understand the meaning of the field names and the
 significance of their contents.
-# Glossary
+## Glossary
 These are the field names commonly used in block explorers on the example EVM sidechain.
 ## General terms
 <dl>
