--- a/content/08-cardano-sidechains/02-sidechain-toolkit/00-technical-specification copy.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/00-technical-specification copy.mdx
@@ -1,4 +1,4 @@
 ---
-title: Technical Specification
-metaTitle: Technical Specification
+title: Technical specification
+metaTitle: Technical specification
 ---
