--- a/content/08-cardano-sidechains/02-sidechain-toolkit/01-mainchain-plutus-scripts.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/01-mainchain-plutus-scripts.mdx
@@ -1,17 +1,17 @@
 ---
-title: Main chain plutus scripts
-metaTitle: Main chain plutus scripts
+title: Main chain Plutus scripts
+metaTitle: Main chain Plutus scripts
 ---
 
-Mainchain utilizes the following components to handle interactions with a sidechain:
+The main chain utilizes the following components to handle interactions with a sidechain:
 
-- `FUELMintingPolicy`: minting policy validating the mint or burn of FUEL tokens on mainchain ([2.](#2-transfer-fuel-tokens-from-mainchain-to-sidechain), [3.2.](#32-individual-claiming))
-- `MPTRootTokenMintingPolicy`: minting policy for storing cross-chain transaction bundles' MPT roots ([3.1.](#31-merkle-root-insertion))
-- `CommitteeCandidateValidator`: script address for committee candidates ([4.](#4-register-committee-candidate), [5.](#5-deregister-committee-membercandidate))
-- `MPTRootTokenValidator`: script address for storing `MPTRootToken`s ([3.1.](#31-merkle-root-insertion))
-- `CommitteeHashValidator`: script address for the committee members' hash ([1.](#1-initialise-contract), [6.](#6-committee-handover))
+- `FUELMintingPolicy`: a minting policy that validates the minting or burning of FUEL tokens on the main chain ([2.](#2-transfer-fuel-tokens-from-mainchain-to-sidechain), [3.2.](#32-individual-claiming))
+- `MPTRootTokenMintingPolicy`: a minting policy for storing cross-chain transaction bundles' MPT roots ([3.1.](#31-merkle-root-insertion))
+- `CommitteeCandidateValidator`: a script address for committee candidates ([4.](#4-register-committee-candidate), [5.](#5-deregister-committee-membercandidate))
+- `MPTRootTokenValidator`: a script address for storing `MPTRootToken`s ([3.1.](#31-merkle-root-insertion))
+- `CommitteeHashValidator`: a script address for the committee members' hash ([1.](#1-initialise-contract), [6.](#6-committee-handover))
 
-All of these policies/validators are parameterised by the sidechain parameters, so we can get unique minting policy and validator script hashes.
+All of these policies and validators are parameterized by the sidechain parameters, which allows getting unique minting policy and validator script hashes.
 
 ```haskell
 data SidechainParams = SidechainParams
@@ -28,9 +28,9 @@ data SidechainParams = SidechainParams
   }
 ```
 
-### 1. Initialise contract
+### 1. Initialize a contract
 
-For initialisation, we use an NFT (consuming some arbitrary utxo) to uniquely identify the current committee members by storing the hash of the concatenated public keys on chain (see [6.1](#61-update-committee-hash)). This committee is used to verify signatures for sidechain to mainchain transfers (see [3.1](#31-merkle-root-insertion)).
+For initialization, we use an NFT (consuming some arbitrary UTXO) to uniquely identify the current committee members by storing the hash of the concatenated public keys on the chain (see [6.1](#61-update-committee-hash)). This committee is used to verify signatures for sidechain to mainchain transfers (see [3.1](#31-merkle-root-insertion)).
 
 **Workflow:**
 
@@ -39,7 +39,7 @@ For initialisation, we use an NFT (consuming some arbitrary utxo) to uniquely id
 2. Use the given sidechain parameters for the rest of the endpoints to work
    with _this_ particular sidechain.
 
-**Endpoint params:**
+**Endpoint parameters:**
 
 ```haskell
 data InitSidechainParams = InitSidechainParams
@@ -59,15 +59,15 @@ data InitSidechainParams = InitSidechainParams
 
 ### 2. Transfer FUEL tokens from mainchain to sidechain
 
-FUEL tokens on the Cardano network represent locked native assets on the sidechain network. When a certain amount of tokens are locked on a certain sidechain contract, we can mint the equivalent amount on Cardano ([2.](#2-transfer-fuel-tokens-from-mainchain-to-sidechain), [3.2.](#32-individual-claiming)). Conversely burning these tokens on the Cardano network ([3.](#3-transfer-fuel-tokens-from-sidechain-to-mainchain)) will release these tokens and send them to the owner.
+FUEL tokens on the Cardano network represent locked native assets on the sidechain network. When a certain amount of tokens are locked on a certain sidechain contract, you can mint the equivalent amount on Cardano ([2.](#2-transfer-fuel-tokens-from-mainchain-to-sidechain), [3.2.](#32-individual-claiming)). Conversely burning these tokens on the Cardano network ([3.](#3-transfer-fuel-tokens-from-sidechain-to-mainchain)) will release these tokens and send them to the owner.
 
 **Workflow:**
 
-1. Call the burn endpoint of the contract with BurnParams
-2. A transaction will be submitted to mainchain burning the specified amount of FUEL tokens and the corresponding sidechain address in the redeemer
-3. The Bridge component observing the mainchain where the given minting policy is handled, verifies the transaction and creates an appropriate sidechain transaction
+1. Call the burn endpoint of the contract with BurnParams.
+2. A transaction will be submitted to the main chain burning the specified amount of FUEL tokens and the corresponding sidechain address in the redeemer.
+3. The Bridge component (observing the main chain where the given minting policy is handled) will verify the transaction and create an appropriate sidechain transaction.
 
-**Endpoint params:**
+**Endpoint parameters:**
 
 ```haskell
 data BurnParams = BurnParams
@@ -85,14 +85,14 @@ data BurnParams = BurnParams
 
 **Workflow:**
 
-1. Sidechain collects unhandled transactions and bundles them at the end of each sidechain epoch
-2. Sidechain block producers compute `txs = outgoing_txs.map(tx => blake2b(cbor(MerkleTreeEntry(tx)))` for each transaction (see `MerkleTreeEntry`), and create a Merkle-tree from these. The root of this tree is signed by at least `t` (multisig threshold) of the committee members with an appended signature scheme
-3. Bridge broadcasts Merkle root to chain
-4. Txs can be claimed [individually](#32-individual-claiming)
+1. Sidechain collects unhandled transactions and bundles them at the end of each sidechain epoch.
+2. Sidechain block producers compute `txs = outgoing_txs.map(tx => blake2b(cbor(MerkleTreeEntry(tx)))` for each transaction (see `MerkleTreeEntry`), and create a Merkle-tree from these. The root of this tree is signed by at least `t` (multisig threshold) of the committee members with an appended signature scheme.
+3. Bridge broadcasts Merkle root to the chain.
+4. Transactions can be claimed [individually](#32-individual-claiming).
 
 #### 3.1. Merkle root insertion
 
-**Endpoint params for merkle root insertion:**
+**Endpoint parameters for Merkle root insertion:**
 
 ```haskell
 data SaveRootParams = SaveRootParams
@@ -120,23 +120,23 @@ data SignedMerkleRoot = SignedMerkleRoot
   }
 ```
 
-Minting policy verifies the following:
+A minting policy verifies that:
 
-- verifies that hash of committeePublicKeys matches the hash saved on chain
-- verifies that all the provided signatures are valid
-- verifies that size(signatures) > 2/3 \* size(committeePubKeys)
-- list of public keys does not contain duplicates
-- if `previousMerkleRoot` is specified, the UTxO with the given roothash is referenced in the transaction as a reference input
+- the hash of committeePublicKeys matches the hash saved on-chain
+- all the provided signatures are valid
+- size(signatures) > 2/3 \* size(committeePubKeys)
+- a list of public keys does not contain duplicates
+- if `previousMerkleRoot` is specified, the UTXO with the given roothash is referenced in the transaction as a reference input
 
-Validator script verifies the following:
+A validator script verifies the following:
 
-- UTxOs containing an `MPTRootToken` cannot be unlocked from the script address
+- UTXOs containing an `MPTRootToken` cannot be unlocked from the script address
 
 ![plutus2](https://user-images.githubusercontent.com/10556209/203349388-b0f3de16-dcfb-4a2d-b63d-44a2c0daeb6b.png)
 
 <figcaption align = "center"><i>Merkle root token minting</i></figcaption><br />
 
-The merkle tree has to be constructed in the exact same way as it is done by the following [merkle tree implementation](https://github.com/mlabs-haskell/trustless-sidechain/blob/master/src/TrustlessSidechain/MerkleTree.hs). Entries in the tree should be calculated as follow:
+The Merkle tree has to be constructed in the exact same way as it is done by the following [Merkle tree implementation](https://github.com/mlabs-haskell/trustless-sidechain/blob/master/src/TrustlessSidechain/MerkleTree.hs). Entries in the tree should be calculated as follows:
 
 ```haskell
 data MerkleTreeEntry = MerkleTreeEntry
@@ -151,7 +151,7 @@ data MerkleTreeEntry = MerkleTreeEntry
 entry = blake2b(cbor(MerkleTreeEntry))
 ```
 
-Signatures for merkle tree should be constructed as follow:
+Signatures for Merkle tree should be constructed as follows:
 
 ```haskell
 data MerkleRootInsertionMessage = MerkleRootInsertionMessage
@@ -168,7 +168,7 @@ signature = ecdsa.sign(data: blake2b(cbor(MerkleRootInsertionMessage)), key: com
 
 #### 3.2. Individual claiming
 
-**Endpoint params for claiming:**
+**Endpoint parameters for claiming:**
 
 ```haskell
 data MintParams = MintParams
@@ -180,7 +180,7 @@ data MintParams = MintParams
   }
 ```
 
-Minting policy verifies the following:
+A minting policy verifies the following:
 
 - `MPTRootToken` with the name of the Merkle root of the transaction (calculated from from the proof) can be found in the `MPTRootTokenValidator` script address
 - recipient, amount, index and previousMerkleRoot combined with merkleProof match against merkleRootHash
@@ -189,7 +189,7 @@ Minting policy verifies the following:
 - the transaction is signed by the recipient
 - the amount matches the actual tx body contents
 
-where the `claimTransactionHash` is a `blake2(cbor(MerkleTreeEntry))`, uniquely identifying a cross chain transaction by pointing to a Merkle tree and the index of the transaction in the tree
+where the `claimTransactionHash` is a `blake2(cbor(MerkleTreeEntry))`, uniquely identifying a cross-chain transaction by pointing to a Merkle tree and the index of the transaction in the tree.
 
 ![plutus3](https://user-images.githubusercontent.com/10556209/203349828-bf3db3aa-7032-4578-a7c2-fe06a882dc95.png)
 
@@ -208,7 +208,7 @@ data FUELRedeemer
 
 **Workflow:**
 
-1. An SPO registering as a block producer (commitee member) for the sidechain sends BlockProducerRegistration and its signature (where the signed message contains the sidechain parameters, sidechain public key and the input utxo in CBOR format)
+1. An SPO registering as a block producer (commitee member) for the sidechain sends BlockProducerRegistration and its signature (where the signed message contains the sidechain parameters, sidechain public key and the input UTXO in CBOR format)
 2. The Bridge monitoring the committee candidate script address is validating the SPO credentials, chainId, and the consumed inputUtxo
 
 **Datum:**
@@ -227,18 +227,18 @@ data BlockProducerRegistration = BlockProducerRegistration
 
 **Workflow:**
 
-1. The UTxO with the registration information can be redeemed by the original sender (doesn't have to check the inputUtxo)
+1. The UTXO with the registration information can be redeemed by the original sender (doesn't have to check the inputUtxo)
 2. The Bridge monitoring the committee candidate script address interprets this as a deregister action
 
 ### 6. Committee handover
 
 In the current implementation of the sidechain, a [Merkle root insertion (3.1)](#31-merkle-root-insertion) can only occur once per sidechain epoch at the time of the committee handover. We expose an endpoint which can handle this action, however the underlying implementation is detached, so in theory, we could do Merkle root insertion and Committee Hash Update actions independently.
 
-We have to be careful about the order of these actions. If the transaction inserting the merkle root for sidechain epoch 1 gets submitted _after_ the committee handover from `committee of epoch 1` to `committee of epoch 2` transaction, the signature would become invalid, since it is signed by the `committee of epoch 1`. To mitigate this issue, we introduce `merkle root chain`, for details see: [6.2](#62-merkle-root-chaining)
+We have to be careful about the order of these actions. If the transaction inserting the Merkle root for sidechain epoch 1 gets submitted _after_ the committee handover from `committee of epoch 1` to `committee of epoch 2` transaction, the signature would become invalid, since it is signed by the `committee of epoch 1`. To mitigate this issue, we introduce `Merkle root chain`, for details see: [6.2](#62-merkle-root-chaining)
 
 #### 6.1 Update committee hash
 
-1. Bridge component triggers the Cardano transaction. This tx does the following:
+1. Bridge component triggers the Cardano transaction. This transaction does the following:
 
 **Endpoint params:**
 
@@ -259,13 +259,13 @@ data UpdateCommitteeHashParams = UpdateCommitteeHashParams
 
 Validator script verifies the following:
 
-- verifies that hash of committeePublicKeys matches the hash saved on chain
-- verifies that all the provided signatures are valid
-- verifies that size(signatures) > 2/3 \* size(committeePubKeys)
-- verifies the NFT of the UTxO holding the old verification key at the script address
-- consumes the above mentioned UTxO
-- verifies that (sidechain epoch of the new committee hash > sidechain epoch of the consumed committee hash utxo)
-- outputs a new UTxO with the updated committee hash containing the NFT to the same script address
+- the hash of committeePublicKeys matches the hash saved on chain
+- all the provided signatures are valid
+- size(signatures) > 2/3 \* size(committeePubKeys)
+- the NFT of the UTXO holding the old verification key at the script address
+- consumes the above mentioned UTXO
+- sidechain epoch of the new committee hash > sidechain epoch of the consumed committee hash utxo
+- outputs a new UTXO with the updated committee hash containing the NFT to the same script address
 - reference to the last Merkle root is referenced in the transaction
 
 **Datum:**
