--- a/content/08-cardano-sidechains/02-sidechain-toolkit/01-plutus-bridge-scripts.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/01-plutus-bridge-scripts.mdx
@@ -1,4 +1,4 @@
 ---
-title: Plutus Bridge Scripts
-metaTitle: Plutus Bridge Scripts
+title: Plutus bridge scripts
+metaTitle: Plutus bridge scripts
 ---
