--- a/content/08-cardano-sidechains/02-sidechain-toolkit/03-chain-follower.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/03-chain-follower.mdx
@@ -2,12 +2,12 @@
 title: Chain follower
 metaTitle: Chain follower
 ---
-# Chain follower
+
 A chain follower such as DB Sync is a component that observes the transactions on a main chain such as Cardano. The chain follower provides the information for a sidechain such as Mamba to stay consistent with the main chain.
 
 [The DB Sync page](https://docs.cardano.org/cardano-components/cardano-db-sync/about-db-sync) gives a high-level description.
 
-## Mamba Bridge
+## Mamba bridge
 The Mamba node uses DB Sync for getting information regarding the main chain.
 
 This is a non-exhaustive list of data retrieved from the main chain:
