Headings/titles formatting

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
@@ -1,24 +1,24 @@
 ---
-title: Create or Import Account with MetaMask
-metaTitle: Create or Import Account with MetaMask
+title: Working with MetaMask
+metaTitle: Working with MetaMask
 ---
 
-## Install MetaMask
+>*MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers.*
 
-*MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers.*
+## Install MetaMask
 
 Use this link to install MetaMask as a browser extension or mobile app: https://metamask.io/.
 
 ![install-meta-mask](https://user-images.githubusercontent.com/10556209/148433190-2aabc719-67fb-40f3-a459-0f5f0d81e169.png)
 
-## Create or Import Account
+## Create or import account
 
 Choose the option to create an account.
 
 ![create-account](../../images/MetaMask2.png)  
 Back up your wallet seed phrase and store it in a safe place.
 
-## Add Cardano EVM sidechain network(s) in Settings
+## Add Cardano EVM sidechain network(s) in settings
 
 Settings > Networks > Add Network > Input the following settings and save.
 
@@ -32,7 +32,7 @@ Now you can select the Cardano EVM sidechain network from MetaMask:
 
 ![select-network](https://user-images.githubusercontent.com/10556209/153285688-bac47217-57ad-4f98-8aa1-c26d57fc407e.PNG)
 
-## Known Issues
+## Known issues
 
 - If the sidechain network was added correctly, but MetaMask does not send transactions, update balance, or simply not interact with the chain, then try to [Reset your MetaMask account](https://metamask.zendesk.com/hc/en-us/articles/360015488891-How-to-reset-an-account).
 - MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers. To avoid browser compatbility issues, use Google Chrome or Brave.
