minor tweak to a heading

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/02-fuel-token.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/02-fuel-token.mdx
@@ -16,7 +16,7 @@ You can claim one test FUEL token every 24 hours.
 You cannot swap the test FUEL tokens you claim from the faucet for any other token, nor can you use them to make any purchases.  
 
 
-## What is Gas?
+## What is gas?
 
 **Gas** refers to the computational cost necessary to successfully conduct a transaction on the sidechain network. This gas is detonated from a small fraction of FUEL when conducting a transaction, deploying a smart contract, or writing to a smart contract.  
 
