--- a/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts.mdx
@@ -1,6 +1,6 @@
 ---
-title: Deploy Smart Contracts
-metaTitle: Deploy Smart Contracts
+title: Deploying smart contracts
+metaTitle: Deploying smart contracts
 ---
 
 <!-- heading no content -->
