--- a/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'About Block Explorer'
-metaTitle: 'About Block Explorer'
+title: 'About block explorer'
+metaTitle: 'About block explorer'
 ---
 
 A block explorer allows you to inspect a blockchain to see its blocks and
