--- a/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
+++ b/content/08-cardano-sidechains/01-basics/04-block-explorer.mdx
@@ -5,13 +5,15 @@ metaTitle: 'About block explorer'
 
 A block explorer allows you to inspect a blockchain to see its blocks and
 transactions.  
+
 This document is based primarily on the
 [Blockscout explorer](https://blockscout.com/), but blockchain explorers
 necessarily use similar terminology and follow a similar pattern in their
 presentation of information.  
-When you use a block explorer, it will list fields and their contents.  
-This document will help you understand the meaning of the field names and the
+
+When you use a block explorer, it will list fields and their contents. This document will help you understand the meaning of the field names and the
 significance of their contents.
+
 ## Glossary
 These are the field names commonly used in block explorers on the example EVM sidechain.
 ## General terms
