--- a/content/08-cardano-sidechains/02-sidechain-toolkit/03-chain-follower.mdx
+++ b/content/08-cardano-sidechains/02-sidechain-toolkit/03-chain-follower.mdx
@@ -7,7 +7,8 @@ A chain follower such as DB Sync is a component that observes the transactions o
 
 [The DB Sync page](https://docs.cardano.org/cardano-components/cardano-db-sync/about-db-sync) gives detailed information about the functionality and how to set it up.
 
-## Usage of the chain follower in Sidechain
+## Using the chain follower on a sidechain
+
 The sidechain node uses DB Sync for getting information regarding the main chain.
 
 This is a non-exhaustive list of data retrieved from the main chain:
@@ -20,7 +21,7 @@ This is a non-exhaustive list of data retrieved from the main chain:
 - The block information for a given block number
 - The slot number corresponding to a UTXO
 - The cross-chain transactions for a given policy, asset name, and a range of blocks within a slot
-- The cross-chain transactions for a given policy, asset name, and a UTXO id.  
+- The cross-chain transactions for a given policy, asset name, and a UTXO ID.  
   
 The sidechain client uses DB Sync to listen to the mainchain's activity, and perform various tasks:  
 
@@ -30,6 +31,7 @@ The sidechain client uses DB Sync to listen to the mainchain's activity, and per
 Transferring funds back from the sidechain to the main chain doesn't use DB Sync, but a different mechanism.
 
 ## Configuring the sidechain node to use your DB Sync instance
+
 After installing and setting up a DB Sync instance, you need to configure a sidechain node to point to it. In the node’s configuration file, set the datasource type to `db-sync` and configure connection details to match your setup. The finished configuration should look similar to the example below:
 
 ```
