--- a/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
@@ -11,17 +11,16 @@ Use this link to install MetaMask as a browser extension or mobile app: https://
 
 ![install-meta-mask](https://user-images.githubusercontent.com/10556209/148433190-2aabc719-67fb-40f3-a459-0f5f0d81e169.png)
 
-## Create or import an account
+## Create or import account
 
-Choose the option to create an account:
+Choose the option to create an account.
 
 ![create-account](../../images/MetaMask2.png)  
-
 Back up your wallet seed phrase and store it in a safe place.
 
 ## Add Cardano EVM sidechain network(s) in settings
 
-Settings > Networks > Add Network > Input the following settings and save:
+Settings > Networks > Add Network > Input the following settings and save.
 
 - Network Name: `Atago`
 - New RPC URL: http://faucet.mamba.atago`
