--- a/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/02-setup-development.mdx
@@ -11,21 +11,19 @@ The Cardano EVM sidechain testnet is EVM-compatible with most Ethereum software 
 
 # Remix
 
-This tutorial will show you how to deploy a solidity smart contract to the EVM sidechain testnet using Remix. [Remix](https://remix.ethereum.org/) is an online IDE to develop and deploy Solidity smart contracts.
+This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Remix. [Remix](https://remix.ethereum.org/) is an online IDE to develop and deploy Solidity smart contracts.
 
 ## Prerequisites
 
-In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, add the testnet to MetaMask and fund your wallet with testnet tokens using the [faucet](http://faucet.mamba.atago/).
-
-- [Create or import an account with MetaMask.](basics/metamask)
+In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you have not done so already, [create or import an account with MetaMask](basics/metamask) and fund your wallet with testnet tokens using the [faucet](http://faucet.mamba.atago/).
 
 ## Step 1 - Configure Remix
 
-- Visit the [Remix IDE](https://remix.ethereum.org/). The left-hand side has a menu [1] and a typical file explorer [2]. The ` Solidity Compiler` [3] and `Deploy and Run Transactions` [4] plugins should be active by default.
+- Visit the [Remix IDE](https://remix.ethereum.org/). The left-hand side has a menu [1] and a typical file explorer [2]. The ` Solidity Compiler` [3] and `Deploy and run transactions` [4] plugins should be active by default.
 
 ![remix-menu](https://user-images.githubusercontent.com/10556209/200480707-ec8b8e69-6cdc-498b-b315-c029fbc2a564.png)
 
-If the solidity compiler and deploy plugins are not activated, then you can search and activate them using the plugin manager [5] located in the bottom-left of the screen.
+If the Solidity compiler and deploy plugins are not activated, you can search and activate them using the plugin manager [5] located in the bottom-left of the screen.
 
 ![remix-plugin](https://user-images.githubusercontent.com/10556209/202550289-1cd1e25a-b1c9-4e66-9600-fad710126c8d.png)
 
@@ -33,15 +31,15 @@ Open MetaMask and double-check the sidechain testnet is the selected network. Th
 
 ![meta-mask-atago](https://user-images.githubusercontent.com/10556209/200482306-af1c0f4d-9ecf-4078-b0a3-a411306d13d1.png)
 
-- In Remix, select the `Deploy & run transactions` plugin [1]. Since you are using MetaMask as your Web3 provider, select "Injected Provider" in the environment settings 2].
+- In Remix, select the `Deploy and run transactions` plugin [1]. Since you are using MetaMask as your Web3 provider, select 'Injected Provider' in the environment settings [2].
 
-![environment-remix]To double-check that Remix is using the correct network, open MetaMask and confirm the network ID (78) and account match.
+![environment-remix]To double-check that Remix is using the correct network, open MetaMask and confirm the network ID (78) and whether the account matches.
 
 ![double-check-remix](https://user-images.githubusercontent.com/10556209/200485405-0794ae10-95fd-4325-87e0-173ba4c2da1e.png)
 
-## Step 2 - The Smart Contract
+## Step 2 - The smart contract
 
-With Remix configured to the sidechain testnet, you can move onto your smart contract development and deployment.
+With Remix configured to the sidechain testnet, you can move on to your smart contract development and deployment.
 
 - In the Remix file explorer, create an `erc20.sol` file in the `contracts/` directory and input the following Solidity statements:
 
@@ -70,42 +68,42 @@ contract MintableERC20 is ERC20("Mintable Token", "MT"), Ownable {
 
 This smart contract describes a mintable ERC20 token using the OpenZeppelin ERC20 contract libraries.
 
-## Step 3 - Compile & Deploy
+## Step 3 - Compile and deploy
 
-- Using the `Solidity compiler` plugin [1], select to "compile" the smart contract [2].
+- Using the `Solidity compiler` plugin [1], select 'compile' the smart contract [2].
 
-When the contract is compiled, you can view contract ABI, Bytecode, and more information located in "Compilation Details" [3].
+When the contract is compiled, you can view contract ABI, Bytecode, and more information located in 'Compilation Details' [3].
 
 ![compile-remix](https://user-images.githubusercontent.com/10556209/200576656-dad4c35d-02f7-40ce-8bd1-3e9f8497e302.png)
 
-- Now, select the `Deploy & run transactions` plugin > select "Deploy" [1] and confirm any MetaMask prompts to sign the transaction. If the deployment is successful, then the Remix console should return a green checkmark with expendable details [2]. The "Deployed Contracts" panel will contain the contract address and generates a contract interface to test functions [3].
+- Then, select the `Deploy and run transactions` plugin > select 'Deploy' [1] and confirm any MetaMask prompts to sign the transaction. If the deployment is successful, the Remix console should return a green checkmark with expendable details [2]. The 'Deployed Contracts' panel will contain the contract address and generate a contract interface to test functions [3].
 
 ![deploy-remix](https://user-images.githubusercontent.com/10556209/201174327-6be015b2-9003-4f3c-8d70-f376dd1a3a9a.png)
 
-To verify the smart contract was deployed on the sidechain testnet you can:
+To verify that the smart contract was deployed on the sidechain testnet you can:
 
-- Search the transaction hash or contract address on the EVM sidechain testnet explorer [here](http://explorer.mamba.atago/).
+- Search the transaction hash or contract address on the EVM sidechain [testnet explorer](http://explorer.mamba.atago/).
 - Open MetaMask and see if the contract deployment transaction was successfully signed.
 - Check Remix logs for deployment details.
   
 # HardHat
-This tutorial will show you how to deploy a solidity smart contract to the EVM sidechain testnet using Hardhat. [Hardhat](https://hardhat.org/) is a popular development enviorment for Ethereum software.
+This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Hardhat. [Hardhat](https://hardhat.org/) is a popular development environment for Ethereum software.
 
 - [Node.js v10](https://nodejs.org/en/) or later
 - [HardHat](https://hardhat.org/)
 
 ## Prerequisites
 
-Hardhat is used in local NPM projects. Therefore, you will need NPM 7 or later.
+Hardhat is used in local NPM projects, so you will need NPM 7 or later.
 
-- Install Node.js version 15 or later using [NVM](https://github.com/nvm-sh/nvm).
+- Install Node.js version 15 or later using [NVM](https://github.com/nvm-sh/nvm):
 
 ```
 $ nvm install 15 --lts
 $ nvm alias default 15
 ```
 
-- Check Node/ NPM versions
+- Check Node and NPM versions:
 
 ```
 $ node -v
@@ -114,7 +112,7 @@ $ npm -v
 7.7.6
 ```
 
-## Step 01 - Create a Hardhat Project
+## Step 01 - Create a Hardhat project
 
 For this tutorial we will create a new NPM project and initilize `npx hardhat` to bootstrap a sample JavaScript project that we will configure to deploy to the sidechain testnet.
 
@@ -132,7 +130,7 @@ $ npm init
 $ npm install --save-dev hardhat
 ```
 
-To create the sample JavaScript project, run `npx hardhat` in your project folder and select to *Create a JavaScript project*.
+To create the sample JavaScript project, run `npx hardhat` in your project folder and select *Create a JavaScript project*.
 
 ```
 $ npx hardhat
@@ -154,7 +152,7 @@ $ npx hardhat
   Quit
 ```
 
-<!-- Hardhat will tell you to install `hardhat-waffle` and `hardhat-ethers` which is required for tests built with Waffle. In case you've missed it, install them by executing the following:
+<!-- Hardhat will ask you to install `hardhat-waffle` and `hardhat-ethers` which is required for tests built with Waffle. In case you've missed it, install them by executing the following:
 
 ```
 npm install --save-dev @nomiclabs/hardhat-waffle ethereum-waffle chai @nomiclabs/hardhat-ethers ethers
@@ -172,17 +170,17 @@ Usage: hardhat [GLOBAL OPTIONS] <TASK> [TASK OPTIONS]
 
 GLOBAL OPTIONS:
 
-  --config           	A Hardhat config file. 
-  --emoji            	Use emoji in messages. 
+  --config           	A Hardhat config file
+  --emoji            	Use emoji in messages
   --flamegraph       	Generate a flamegraph of your Hardhat tasks 
   --help             	Shows this message, or a task's help if its name is provided 
-  --max-memory       	The maximum amount of memory that Hardhat can use. 
-  --network          	The network to connect to. 
-  --show-stack-traces	Show stack traces (always enabled on CI servers). 
-  --tsconfig         	A TypeScript config file. 
+  --max-memory       	The maximum amount of memory that Hardhat can use
+  --network          	The network to connect to
+  --show-stack-traces	Show stack traces (always enabled on CI servers)
+  --tsconfig         	A TypeScript config file
   --typecheck        	Enable TypeScript type-checking of your scripts/tests 
   --verbose          	Enables Hardhat verbose logging 
-  --version          	Shows hardhat's version. 
+  --version          	Shows hardhat's version
 
 
 AVAILABLE TASKS:
@@ -190,21 +188,21 @@ AVAILABLE TASKS:
   check             	Check whatever you need
   clean             	Clears the cache and deletes all artifacts
   compile           	Compiles the entire project, building all artifacts
-  console           	Opens a hardhat console
+  console           	Opens a Hardhat console
   coverage          	Generates a code coverage report for tests
   flatten           	Flattens and prints contracts and their dependencies
   gas-reporter:merge	
   help              	Prints this message
-  node              	Starts a JSON-RPC server on top of Hardhat Network
+  node              	Starts a JSON-RPC server on top of the Hardhat network
   run               	Runs a user-defined script after compiling the project
   test              	Runs mocha tests
-  typechain         	Generate Typechain typings for compiled contracts
+  typechain         	Generates Typechain typings for compiled contracts
   verify            	Verifies contract on Etherscan
 
 To get help for a specific task run: npx hardhat help [task]
 ```
 
-If you need additional information on using Hardhat, then visit the official [Hardhat documentation](https://hardhat.org/getting-started/).
+If you need additional information on using Hardhat, see official [Hardhat documentation](https://hardhat.org/getting-started/).
 
 ## Step 02 - Configure Hardhat
 
@@ -228,7 +226,7 @@ module.exports = {
 };
 ```
 
-## Step 03 - Compile & Deploy
+## Step 03 - Compile and deploy
 
 - To compile Solidity files in the `contracts/` directory of your Hardhat project execute `npx hardhat compile`:
 
@@ -249,7 +247,7 @@ Greeter deployed to: 0x95E1C8F6C00d8cB518faBA33c8Ae814fc12E3090
 
 # Truffle
 
-This tutorial will show you how to deploy a solidity smart contract to the EVM sidechain testnet using Truffle. [Truffle](https://trufflesuite.com/truffle/) is a popular development framework for EVM-based applications.
+This tutorial will show you how to deploy a Solidity smart contract to the EVM sidechain testnet using Truffle. [Truffle](https://trufflesuite.com/truffle/) is a popular development framework for EVM-based applications.
 
 ## Prerequisites
 
@@ -265,7 +263,7 @@ $ node --version
 $ npm --version
 ```
 
-Install Truffle and check Truffle is installed:
+Install Truffle and check whether it installed:
 
 ```
 $ npm install -g truffle
@@ -274,7 +272,7 @@ $ truffle version
 
 ## Step 1 - Configure Truffle
 
-You need a Truffle project before you can configure Truffle to deploy on the EVM sidechain testnet. This demonstration will use the [React Truffle Box](https://trufflesuite.com/boxes/react/).
+You need to create a Truffle project before configuring Truffle to deploy on the EVM sidechain testnet. This demonstration will use the [React Truffle Box](https://trufflesuite.com/boxes/react/).
 
 - Create a new project directory for your Truffle project and unbox the React Truffle Box:
 
@@ -289,7 +287,7 @@ $ truffle unbox react
 
 ## Step - Truffle Migrate
 
-At this point, you've defined the EVM sidechain testnet and your testnet account to sign smart contract deployments. So, you're ready to deploy!
+At this point, you've defined the EVM sidechain testnet and your testnet account to sign smart contract deployments. You are now ready to deploy!
 
 - Within the `truffle/` directory of our project, execute `truffle migrate` while passing `atago` for the `--network` parameter:
 
@@ -297,4 +295,4 @@ At this point, you've defined the EVM sidechain testnet and your testnet account
 $ truffle migrate --network atago
 ```
 
-Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be searched on the EVM sidechain testnet explorer [here](http://explorer.mamba.atago/).
+Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be searched on the EVM sidechain [testnet explorer](http://explorer.mamba.atago/).
