--- a/content/08-cardano-sidechains/03-example-evm-sidechains/08-support/01-example-evm-sidechain-faq.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/08-support/01-example-evm-sidechain-faq.mdx
@@ -1,4 +1,4 @@
 ---
-title: Example EVM Sidechain FAQ
-metaTitle:  Example EVM Sidechain FAQ
+title: Example EVM sidechain FAQ
+metaTitle:  Example EVM sidechain FAQ
 ---
