Correct broken links due to sitemap changes

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/03-verify-contract.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/03-verify-contract.mdx
@@ -47,7 +47,7 @@ Click on the contract address (labeled either `To: [Contract  0x.... created]` o
 
 On this page, after scrolling down you can see tabs, one of them being 'Code'. Clicking it will show known code if it exists, or raw bytes of the contract if the source is not known. 
 
-![Code tab](../images/02_1_code_tab.png)  
+![Code tab](../../../images/02_1_code_tab.png)  
 
 ## Verifying a contract 
 
